address PR comments